Make boilerplate 4th try

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>My first website!</title>
+        <title>My first webpage</title>
     </head>
-    <body>Heyo</body>
+    <body>
+        4th try
+    </body>
 </html>
