Add headings and paragraphs with bold and italics

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -5,6 +5,30 @@
         <title>My first webpage</title>
     </head>
     <body>
-        4th try
+        <h1>Verx's Blog</h1>
+        <h2>Who Am I?</h2>
+        <p>
+            Hi there. My name is <strong>Andre</strong>, and I am 19 years old.. My internet name is <em>Verx</em> or <em>Lethual</em>, you can choose
+            either of the two. I am currently taking a computer scinece degree in a university in my home country. As a student, I am fond of studying
+            mathematics than anything else, and I like to teach my peers about math. Outside of my studies, I like to watch youtube & twitch, play video games,
+            and reading horror books.
+        </p>
+        <h2>Why Computer Science?</h2>
+        <p>
+            It all started when I was in senior high school, the time when I still dream of becoming an engineer. Here's the main problem: I don't know
+            what engineering field I like or fit in. During christmas break in 2020, I came upon a video by William Lin on YouTube, and I watched it entirely.
+            I became more <strong>interested</strong> because of that. After that, I began studying programming by myself.
+        </p>
+        <h2>Do I have any plans in the future?</h2>
+        <p>
+            I believe that I still have a long journey ahead. However, while I'm studying computer science in a university, I want to hone my programming skills by
+            enrolling myself in competitive programming lessons and compete online. My goal in that is to win at least <em><strong>one</strong></em> competition, then I can
+            lie on my bed for relief. Another one is to join mock interviews online. To be honest, I was never interviewed before, so I don't have a clear idea of what
+            will happen during an interview. Those are the things that are on top of my head while typing this, but my ultimate goal is to have a job at Google. Yes, you
+            read it write: Google. That's my dream workplace. For school organizations, I think I would join at most one organization because of the expected workloads
+            that I will receive. Specifically, I would like to join UNESCO. :D
+        </p>
+
+
     </body>
 </html>
